<resources>
    <string name="app_name">Счётчик</string>

    <string name="notification_10_days">10 дней</string>
    <string name="notification_mounth">Месяц</string>
    <string name="notification_50_days">50 дней</string>
    <string name="notification_100_days">100 дней</string>
    <string name="notification_year">Год</string>

    <string name="card_start_date_title">Начало остчёта</string>
    <string name="card_widget_design_title">Внешний вид</string>
    <string name="card_widget_design_subtitle_style">Стиль</string>
    <string name="card_widget_design_subtitle_color">Цвет</string>
    <string name="card_widget_design_subtitle_text_size">Внешний вид</string>
    <string name="card_notification_settings_title">Напоминания</string>

    <string name="notification_title">Сегодня важная дата!</string>
    <string name="notification_start_count">Начат остчёт</string>
</resources>
