<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Start date card-->
            <android.support.v7.widget.CardView
                android:id="@id/card_start_date"
                app:cardElevation="@dimen/card_elevation"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/card_content_padding"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@id/card_start_date_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:paddingLeft="@dimen/horizontal_content_padding"
                        android:paddingRight="@dimen/horizontal_content_padding"
                        android:text="@string/card_start_date_title"
                        android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>

                    <TextView
                        android:id="@id/card_start_date_count"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:paddingTop="@dimen/vertical_content_padding"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/card_start_date_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <!--Widget design card-->
            <android.support.v7.widget.CardView
                android:id="@id/card_widget_design"
                app:cardElevation="@dimen/card_elevation"
                app:contentPadding="@dimen/card_content_padding"
                app:cardUseCompatPadding="true"
                android:layout_below="@id/card_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@id/card_widget_design_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/horizontal_content_padding"
                        android:paddingRight="@dimen/horizontal_content_padding"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/card_widget_design_title"
                        android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>

                    <include
                        android:id="@id/card_widget_design_preview"
                        android:layout_width="@dimen/widget_preview_design_size"
                        android:layout_height="@dimen/widget_preview_design_size"
                        android:layout_below="@id/card_widget_design_title"
                        android:layout_centerHorizontal="true"
                        layout="@layout/count_widget"/>

                    <LinearLayout
                        android:id="@id/card_widget_design_container_style"
                        android:layout_below="@id/card_widget_design_preview"
                        android:paddingTop="@dimen/vertical_content_padding"
                        android:layout_centerHorizontal="true"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@id/card_widget_design_style_subtitle"
                            android:text="@string/card_widget_design_subtitle_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@id/card_widget_design_style_recycler"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@id/card_widget_design_container_color"
                        android:layout_below="@id/card_widget_design_container_style"
                        android:paddingTop="@dimen/vertical_content_padding"
                        android:layout_centerHorizontal="true"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@id/card_widget_design_color_subtitle"
                            android:text="@string/card_widget_design_subtitle_color"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@id/card_widget_design_color_recycler"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@id/card_widget_design_container_text_size"
                        android:layout_below="@id/card_widget_design_container_color"
                        android:paddingTop="@dimen/vertical_content_padding"
                        android:layout_centerHorizontal="true"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@id/card_widget_design_text_size_subtitle"
                            android:text="@string/card_widget_design_subtitle_text_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

                        <android.support.v7.widget.AppCompatSeekBar
                            android:id="@id/card_widget_design_text_size_seekbar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <!--Notification settings card-->
            <android.support.v7.widget.CardView
                android:id="@id/card_notification_settings"
                android:layout_below="@id/card_widget_design"
                app:cardElevation="@dimen/card_elevation"
                app:contentPadding="@dimen/card_content_padding"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@id/card_notification_settings_title"
                        android:paddingLeft="@dimen/horizontal_content_padding"
                        android:paddingRight="@dimen/horizontal_content_padding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/card_notification_settings_title"
                        android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>

                    <ru.jkstop.dayCounter.ExpandedListView
                        android:id="@id/card_notification_settings_list"
                        android:layout_below="@id/card_notification_settings_title"
                        android:divider="@android:color/transparent"
                        android:paddingTop="@dimen/vertical_content_padding"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@id/add_widget_fab"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:src="@drawable/check"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>